--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -1,38 +1,40 @@
-alerts:
-- rule: DEPLOYMENT_FAILED
-- rule: DOMAIN_FAILED
-features:
-- buildpack-stack=ubuntu-22
-ingress:
-  rules:
-  - component:
-      name: nginx
-    match:
-      path:
-        prefix: /
-  - component:
-      name: nginx2
-    match:
-      path:
-        prefix: /nginx2
-name: king-prawn-app
-region: lon
-services:
-- http_port: 80
-  image:
-    registry: library
-    registry_type: DOCKER_HUB
-    repository: nginx
-    tag: latest
-  instance_count: 1
-  instance_size_slug: professional-xs
-  name: nginx
-- http_port: 80
-  image:
-    registry: library
-    registry_type: DOCKER_HUB
-    repository: nginx
-    tag: latest
-  instance_count: 1
-  instance_size_slug: professional-xs
-  name: nginx2
+spec:
+  alerts:
+  - rule: DEPLOYMENT_FAILED
+  - rule: DOMAIN_FAILED
+  features:
+  - buildpack-stack=ubuntu-22
+  ingress:
+    rules:
+    - component:
+        name: nginx
+      match:
+        path:
+          prefix: /
+    - component:
+        name: nginx2
+      match:
+        path:
+          prefix: /nginx2
+  name: king-prawn-app
+  region: lon
+  services:
+  - http_port: 80
+    image:
+      registry: library
+      registry_type: DOCKER_HUB
+      repository: nginx
+      tag: latest
+    instance_count: 1
+    instance_size_slug: professional-xs
+    name: nginx
+  - http_port: 80
+    image:
+      registry: library
+      registry_type: DOCKER_HUB
+      repository: nginx
+      tag: latest
+    instance_count: 1
+    instance_size_slug: professional-xs
+    name: nginx2
+  
